# asterdex_client

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml
.codex/: AGENTS.md
.codex/rules/: custom.rules
docs/: aster-endpoints.md  order-book-sync.md
examples/: check_create_market_order.py
src/asterdex_client/: __init__.py  auth.py  clients.py  models.py  orderbook.py  transport.py  ws.py
tests/: test_orderbook.py  test_rest_clients.py  test_signing.py  test_ws_models.py
