[project]
name = "asterdex-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shion Noguchi", email = "shion24stat@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
asterdex-client = "asterdex_client:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
